--- a/index.html
+++ b/index.html
@@ -364,6 +364,31 @@ Relictum отзывы
     </div>
 </section>
 
+<section data-bs-version="5.1" class="video2 cid-sRTt7aWky9" id="video2-f">
+
+
+    <div class="container">
+        <div class="mbr-section-head">
+            <h4 class="mbr-section-title mbr-fonts-style mb-0 display-2">
+                <strong>Крупные инвесторы</strong></h4>
+            <h5 class="mbr-section-subtitle mbr-fonts-style mb-0 mt-2 display-7">Фонд который присоединился к проекту,
+                смотрите видео основателей</h5>
+        </div>
+        <div class="row justify-content-center mt-4">
+            <div class="col-12 col-md-10 video-block">
+                <div class="video-wrapper">
+                    <iframe class="mbr-embedded-video"
+                            src="https://www.youtube.com/embed/xVcoLF1RnmM?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0"
+                            width="1280" height="720" frameborder="0" allowfullscreen></iframe>
+                </div>
+                <p class="mbr-text pt-2 mbr-fonts-style display-4">
+                    Крупный фонд, который присоединился к проекту на Московском открытии галереи NFT Relictum, съемка
+                    партнеров</p>
+            </div>
+        </div>
+    </div>
+</section>
+
 <section data-bs-version="5.1" class="image1 cid-sQZksxAaib mbr-fullscreen" id="image1-9">
 
 
